[gd_scene load_steps=8 format=2]

[ext_resource path="res://DefaultTiles.tres" type="TileSet" id=1]
[ext_resource path="res://DefaultTheme.tres" type="Theme" id=2]
[ext_resource path="res://GameLogic.gd" type="Script" id=3]
[ext_resource path="res://assets/targeter.png" type="Texture" id=4]
[ext_resource path="res://LevelScene.gd" type="Script" id=5]
[ext_resource path="res://timeline/TimelineViewer.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/star.png" type="Texture" id=7]

[node name="LevelScene" type="Node2D"]
script = ExtResource( 5 )

[node name="UnderTerrainFolder" type="Node2D" parent="."]

[node name="LevelFolder" type="Node2D" parent="."]

[node name="TerrainMap" type="TileMap" parent="LevelFolder"]
tile_set = ExtResource( 1 )
cell_size = Vector2( 24, 24 )
format = 1
tile_data = PoolIntArray( 0, 14, 524290, 1, 14, 196614, 2, 14, 196614, 3, 14, 196614, 4, 14, 196614, 5, 14, 196614, 6, 14, 196614, 7, 14, 196614, 8, 14, 196614, 9, 14, 196614, 10, 14, 196614, 11, 14, 196614, 12, 14, 196614, 13, 14, 196614, 14, 14, 196614, 15, 14, 196614, 16, 14, 196614, 17, 14, 196614, 18, 14, 196614, 19, 14, 196614, 20, 14, 524292, 65536, 14, 262145, 65556, 14, 262145, 131072, 14, 262145, 131092, 14, 262145, 196608, 14, 262145, 196612, 14, 524290, 196613, 14, 196614, 196614, 14, 524292, 196628, 14, 262145, 262144, 14, 262145, 262147, 14, 524290, 262148, 14, 655364, 262150, 14, 655362, 262151, 14, 524292, 262164, 14, 262145, 327680, 14, 262145, 327682, 14, 524290, 327683, 14, 655364, 327687, 14, 655362, 327688, 14, 524292, 327700, 14, 262145, 393216, 14, 589826, 393217, 14, 196614, 393218, 14, 589828, 393224, 14, 589826, 393225, 14, 196615, 393236, 14, 262145, 458752, 14, 262145, 458754, 14, 327681, 458760, 14, 327681, 458768, 14, 196609, 458772, 14, 262145, 524288, 14, 262145, 524289, 8, 0, 524297, 2, 0, 524300, 14, 196609, 524302, 7, 0, 524304, 14, 262145, 524306, 1, 0, 524308, 14, 262145, 589824, 14, 655362, 589825, 14, 196614, 589826, 14, 196614, 589827, 14, 196614, 589828, 14, 196614, 589829, 14, 196614, 589830, 14, 196614, 589831, 14, 196614, 589832, 14, 524291, 589833, 14, 196614, 589834, 14, 196614, 589835, 14, 196614, 589836, 14, 655363, 589837, 14, 196614, 589838, 14, 196614, 589839, 14, 196614, 589840, 14, 655363, 589841, 14, 196614, 589842, 14, 196614, 589843, 14, 196614, 589844, 14, 655364, 655368, 14, 262145, 720904, 14, 327681 )

[node name="UnderActorsParticles" type="Node2D" parent="."]

[node name="ActorsFolder" type="Node2D" parent="."]

[node name="GhostsFolder" type="Node2D" parent="."]

[node name="OverActorsParticles" type="Node2D" parent="."]

[node name="Targeter" type="Sprite" parent="."]
position = Vector2( -28, -30 )
texture = ExtResource( 4 )
offset = Vector2( 12, 12 )

[node name="GameLogic" type="Node" parent="."]
script = ExtResource( 3 )

[node name="LevelLabel" type="Label" parent="."]
margin_right = 512.0
margin_bottom = 14.0
theme = ExtResource( 2 )
text = "Level 01 - Blah Blah Blah"
align = 1
valign = 1

[node name="LevelStar" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 7 )
centered = false

[node name="MenuButton" type="Button" parent="."]
margin_left = 450.0
margin_top = 278.0
margin_right = 510.0
margin_bottom = 298.0
theme = ExtResource( 2 )
text = "Menu (Esc)"

[node name="WinLabel" type="Label" parent="."]
visible = false
margin_left = -2.0
margin_top = 113.0
margin_right = 510.0
margin_bottom = 166.0
theme = ExtResource( 2 )
text = "You have won!

[Enter]: Continue
[F11]: Watch Replay"
align = 1

[node name="HeavyInfoLabel" type="Label" parent="."]
margin_top = 1.0
margin_right = 37.0
margin_bottom = 26.0
theme = ExtResource( 2 )
custom_colors/font_color = Color( 1, 0.517647, 0.172549, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Heavy
99/99"
align = 1
valign = 1

[node name="LightInfoLabel" type="Label" parent="."]
margin_left = 478.0
margin_top = 1.0
margin_right = 511.0
margin_bottom = 26.0
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0.87451, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Light
99/99"
align = 1
valign = 1

[node name="MetaInfoLabel" type="Label" parent="."]
margin_top = 288.0
margin_right = 511.0
margin_bottom = 302.0
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0.662745, 0.941176, 0.372549, 1 )
text = "Meta"
align = 1
valign = 1

[node name="HeavyTimeline" parent="." instance=ExtResource( 6 )]
position = Vector2( 6, 26 )

[node name="LightTimeline" parent="." instance=ExtResource( 6 )]
position = Vector2( 482, 26 )
